Trying to fix scrolling issue and boucing effect on iOS

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -31,6 +31,7 @@ input:focus {
 html,
 body,
 #gradient-canvas-body {
+    touch-action: none;
     overflow: hidden;
     width: 100%;
     height: 100%;
@@ -40,11 +41,15 @@ body,
 
 html,
 body {
+    position: fixed;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    touch-action: none;
+}
+
+body.not-fixed {
+    position: initial !important;
 }
 
 #gradient-canvas-me {
@@ -306,11 +311,13 @@ a:-webkit-any-link {
 }
 
 #search-items {
+    touch-action: pan-x !important;
+    overflow-x: scroll !important;
+    -webkit-overflow-scrolling: touch !important;
+    overflow-y: hidden;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    overflow-x: scroll;
-    overflow-y: hidden;
     white-space: nowrap;
     align-items: center;
     height: 100%;
